--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# Environment Variables
 .env
-backend/.env
-backend/__pycache__/
-frontend/node_modules/
-frontend/dist/
-.DS_Store
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
